# ChangeLog for www-apps/mythweb
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-apps/mythweb/ChangeLog,v 1.32 2007/04/20 18:46:24 cardoe Exp $

*mythweb-0.21_pre13285 (20 Apr 2007)

  20 Apr 2007; Doug Goldstein <cardoe@gentoo.org>
  +mythweb-0.21_pre13285.ebuild:
  Adding experimental trunk ebuild

  20 Apr 2007; Doug Goldstein <cardoe@gentoo.org>
  -mythweb-0.19_p10505.ebuild:
  remove old version

  24 Dec 2006; Doug Goldstein <cardoe@gentoo.org> -mythweb-0.19.ebuild,
  mythweb-0.19_p10505.ebuild, -mythweb-0.20_p11329.ebuild,
  mythweb-0.20_p11671.ebuild:
  Stabling for amd64, ppc, and x86

*mythweb-0.20_p11671 (14 Nov 2006)

  14 Nov 2006; Doug Goldstein <cardoe@gentoo.org>
  -mythweb-0.20_p11188.ebuild, +mythweb-0.20_p11671.ebuild:
  Rev bump to latest upstream fixes

  29 Sep 2006; Doug Goldstein <cardoe@gentoo.org>
  mythweb-0.20_p11329.ebuild:
  Fix bad patching

  29 Sep 2006; Doug Goldstein <cardoe@gentoo.org>
  mythweb-0.20_p11329.ebuild:
  Fixed streaming depends since they switched to a perl script to stream

*mythweb-0.20_p11329 (29 Sep 2006)

  29 Sep 2006; Doug Goldstein <cardoe@gentoo.org>
  +mythweb-0.20_p11329.ebuild:
  Revision Bump for v31 protocol

  28 Sep 2006; Steve Dibb <beandog@gentoo.org> mythweb-0.20_p11188.ebuild:
  Add php dep for posix (thanks to msfroh)

  20 Sep 2006; Doug Goldstein <cardoe@gentoo.org>
  mythweb-0.20_p11188.ebuild:
  Change around for new eclass

  16 Sep 2006; Doug Goldstein <cardoe@gentoo.org>
  +files/postinstall-en-0.20.txt, mythweb-0.19.ebuild,
  mythweb-0.19_p10505.ebuild, mythweb-0.20_p11188.ebuild:
  Check for pcre extension in PHP. Work on defaulting some security to MythWeb
  default install. (masked version)

  16 Sep 2006; Doug Goldstein <cardoe@gentoo.org> mythweb-0.19.ebuild,
  mythweb-0.19_p10505.ebuild:
  config protect .htaccess

*mythweb-0.20_p11188 (14 Sep 2006)

  14 Sep 2006; Doug Goldstein <cardoe@gentoo.org> mythweb-0.19.ebuild,